# agent

./: .deployignore  .env.example  .gitignore  .prettierignore  .vercelignore  AGENTS.md  CLAUDE.md  FILE_UPLOAD_SETUP.md  README.md  eslint.config.js  index.html  insforge.toml  package.json  playwright.config.ts  run.sh  sample_profile.md  vite.config.ts  wrangler.jsonc
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_startup_community.py
backend/app/: __init__.py  auth.py  config.py  insforge.py  llm.py  main.py  models.py  pai.py  schemas.py  scoring.py
backend/app/agent_network/: __init__.py  agent_chat.py  discovery.py  feed_actions.py  safety.py  service.py
backend/app/agents/: llm.py  workflows.py
backend/app/api/: deps.py
backend/app/api/routes/: a2a.py  agents.py  auth.py  communities.py  conversations.py  discover.py  (+4 more)
backend/app/core/: config.py  email.py  security.py
backend/app/db/: seed.py  session.py
backend/app/routers/: agent_network.py  agents.py  auth.py  discovery.py  interviews.py  messages.py
backend/app/services/: accounts.py  intros.py  matching.py  realtime.py  serializers.py
backend/app/workers/: celery_app.py
backend/tests/: conftest.py  test_agent_network_chat.py  test_agent_network_safety.py  test_agent_network_service.py  test_app.py  test_discovery.py  test_intros.py  test_matching.py  test_messages.py  test_scoring.py  test_security.py  test_seed.py
(+87 files in other folders)
