[project]
name = "agentcircle-backend"
version = "0.1.0"
description = "Python backend for AgentCircle"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "bcrypt>=4.2.0",
  "celery[redis]>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi[standard]>=0.115.0",
  "greenlet>=3.1.0",
  "httpx>=0.28.0",
  "itsdangerous>=2.2.0",
  "langchain>=1.0,<2.0",
  "langchain-core>=1.0,<2.0",
  "langchain-openai>=0.3.0",
  "langsmith>=0.3.0",
  "psycopg[binary,pool]>=3.2.0",
  "pydantic-settings>=2.7.0",
  "pyjwt>=2.10.0",
  "python-multipart>=0.0.20",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
